--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/core": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "jest": "^26.1.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^2.0.5"
   },
@@ -18,6 +19,7 @@
     "react-dom": "^16.13.1"
   },
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "test": "jest"
   }
 }
