--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "prettier": "^2.0.5"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.10.5",
     "@babel/polyfill": "^7.10.4",
     "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
+  "moduleDirectories": [
+    "node_modules"
+  ],
   "scripts": {
     "start": "parcel index.html",
     "test": "jest"
